package com.journaldev;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/3/2021 5:05 PM
*/



public class Socket {
    public Volt getVolt() {
        return new Volt(120);
    }
}
